endpoint and swagger change password
